fix spacing and update Annotations style

--- a/app/oligrapher.scss
+++ b/app/oligrapher.scss
@@ -108,7 +108,12 @@ $edge_highlight_color: $oligrapher_blue;
   a {
     color: $link_color;
   }
+}
 
+#oligrapher-container #oligrapher-header {
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+  padding-bottom: 0.75em;
 }
 
 #oligrapher-container #oligrapher-header,
@@ -121,10 +126,7 @@ $edge_highlight_color: $oligrapher_blue;
   &.oligrapher-header-collapsed {
     min-height: 52px;
 
-    #oligrapher-header-top {
-      /* display: flex; */
-      /* flex-direction: row; */
-    }
+    #oligrapher-header-top {}
 
     h1#oligrapher-title {
       margin-top: 7px;
@@ -196,12 +198,6 @@ $edge_highlight_color: $oligrapher_blue;
   #oligrapher-header-bottom {
     display: flex;
     flex-direction: row;
-
-    margin-bottom: 8px;
-
-    &:not(.editing) {
-      margin-bottom: 0.5em;
-    }
 
     /* byline  */
     #oligrapher-header-left-wrapper {
@@ -865,7 +861,7 @@ $edge_highlight_color: $oligrapher_blue;
   }
 }
 
-div.lock {
+#oligrapher-container div.lock {
   z-index: 20;
   position: absolute;
   top: 20%;
@@ -1045,15 +1041,13 @@ div.lock {
 }
 
 #oligrapher-container #oligrapher-annotations-tracker {
-  display: inline-block;
-  margin-left: 5px;
-  margin-bottom: 1em;
-  position: relative;
-  top: 5px;
+  align-self: center;
+  display: flex;
+  gap: 5px;
+  padding-left: 8px;
+  flex-grow: 1;
 
   .tracker-circle {
-    display: inline-block;
-    margin-left: 5px;
     height: 20px;
     width: 20px;
     border-radius: 10px;
@@ -1068,63 +1062,57 @@ div.lock {
 
 #oligrapher-container #oligrapher-annotations,
 #oligrapher-container #oligrapher-annotations-condensed {
-  .oligrapher-annotations-hide {
-    float: right;
-    position: relative;
-    top: 5px;
-    cursor: pointer;
+  // .oligrapher-annotations-hide {
+  //   float: right;
+  //   position: relative;
+  //   top: 5px;
+  //   cursor: pointer;
 
-    svg {
-      height: 20px;
-      width: 20px;
-    }
-  }
+  //   svg {
+  //     height: 20px;
+  //     width: 20px;
+  //   }
+  // }
 }
 
 #oligrapher-container #oligrapher-annotations {
-  border-left: 1px solid #eee;
-  padding: 1em;
-  padding-right: 0;
-  margin-right: 15px;
   height: 100%;
-  overflow-x: hidden;
+  border-left: 1px solid #eee;
 
-  .oligrapher-annotations-header {
-    font-size: 26px;
-    font-weight: bold;
-    margin-right: 1em;
+  #oligrapher-annotations-body {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #oligrapher-annotations-nav {
+    display: flex;
+    h4 {
+      flex-grow: 1
+    }
   }
 
   .oligrapher-annotation {
-    overflow-y: auto;
-  }
+    flex: 1;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    height: 100%;
+    overflow: auto;
 
-  .oligrapher-annotation-header {
-    font-size: 2em;
-    line-height: 1.2em;
-    margin-top: 0;
-    margin-bottom: 0.5em;
-  }
+    .oligrapher-annotation-text {
+      height: 100%;
+      min-height: 0;
+      line-height: 1.3em;
 
-  .oligrapher-annotations-actions button {
-    margin-left: 0.5em;
-  }
-
-  .oligrapher-annotation-text {
-    line-height: 1.3em;
-
-    blockquote {
-      color: #666;
-      border-left: 5px solid #ccc;
-      margin: 1.5em 10px;
-      padding: 0.5em 10px;
-      quotes: "\201C""\201D""\2018""\2019";
+      blockquote {
+        color: #666;
+        border-left: 5px solid #ccc;
+        padding: 0.75em 10px;
+        quotes: "\201C""\201D""\2018""\2019";
+      }
     }
   }
-}
-
-#oligrapher-container #oligrapher-annotations-list {
-  margin-top: 0.5em;
 }
 
 #oligrapher-container .annotation-list-item {
@@ -1187,8 +1175,7 @@ div.lock {
 }
 
 /* Other */
-
-#oligrapher-embed-form {
+#oligrapher-container #oligrapher-embed-form {
   padding: 0.8em;
   width: 500px;
   background-color: #f8f8f8;
